[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://urban-landscape-background-Preview.png" type="Texture" id=2]
[ext_resource path="res://level/tileset.tres" type="TileSet" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 143 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 175 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.4 )
motion_mirroring = Vector2( 768, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 198.894, -180 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 70, 35 )
format = 1
tile_data = PoolIntArray( -1966069, -1073741821, 0, -1966053, -1073741821, 0, -1769482, -1073741821, 0, -1834997, -1073741821, 0, -1834981, -1073741821, 0, -1638410, -1073741821, 0, -1703925, -1073741821, 0, -1703909, -1073741821, 0, -1507338, -1073741821, 0, -1572853, -1073741821, 0, -1572837, -1073741821, 0, -1376266, -1073741821, 0, -1441781, -1073741821, 0, -1441765, -1073741821, 0, -1245194, -1073741821, 0, -1310709, -1073741821, 0, -1310693, -1073741821, 0, -1114122, -1073741821, 0, -1179637, -1073741821, 0, -1179621, -1073741821, 0, -983050, -1073741821, 0, -983042, 0, 0, -983041, 1, 0, -1048576, 1, 0, -1048575, 1, 0, -1048574, 1, 0, -1048573, 1, 0, -1048572, 2, 0, -1048565, -1073741821, 0, -1048558, 5, 0, -1048549, -1073741821, 0, -983039, -1073741821, 0, -851978, -1073741821, 0, -851977, 1, 0, -851976, 1, 0, -851975, 2, 0, -917496, 0, 0, -917495, 1, 0, -917494, 1, 0, -917493, 1, 0, -917492, 1, 0, -917491, 1, 0, -917490, 1, 0, -917489, 1, 0, -917488, 1, 0, -917487, 2, 0, -917486, 4, 0, -917485, 0, 0, -917484, 1, 0, -917483, 1, 0, -917482, 1, 0, -917481, 1, 0, -917480, 1, 0, -917479, 1, 0, -917478, 1, 0, -917477, -1073741821, 0, -851967, -1073741821, 0, -720906, -1073741821, 0, -786414, 4, 0, -786405, -1073741821, 0, -720895, -1073741821, 0, -720884, 0, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 2, 0, -589834, -1073741821, 0, -655344, -1073741821, 0, -655342, 4, 0, -655333, -1073741821, 0, -524292, 0, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 2, 0, -458762, -1073741821, 0, -524276, 5, 0, -524272, -1073741821, 0, -524270, 4, 0, -524261, -1073741821, 0, -327690, -1073741821, 0, -393208, 0, 0, -393207, 1, 0, -393206, 1, 0, -393205, 1, 0, -393204, 4, 0, -393203, 1, 0, -393202, 1, 0, -393201, 1, 0, -393200, 1, 0, -393199, 1, 0, -393198, 1, 0, -393197, 2, 0, -393192, 0, 0, -393191, 1, 0, -393190, 2, 0, -393189, -1073741821, 0, -262153, 0, 0, -262152, 1, 0, -262151, 1, 0, -262150, 1, 0, -262149, 2, 0, -196618, -1073741821, 0, -262132, 4, 0, -262117, -1073741821, 0, -131074, 0, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 2, 0, -196585, 0, 0, -196584, 1, 0, -196583, 2, 0, -65546, -1073741821, 0, -131070, -1073741821, 0, -131060, 4, 0, -131049, -1073741821, 0, -131045, -1073741821, 0, 65526, 0, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Node2D" parent="."]

[node name="ladders" type="Node2D" parent="."]
editor/display_folded = true

[node name="Area2D" type="Area2D" parent="ladders" groups=[
"ladder",
]]
position = Vector2( 875, -126 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladders/Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="ladders" groups=[
"ladder",
]]
position = Vector2( 1295, -375 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladders/Area2D2"]
shape = SubResource( 2 )

[node name="spawners" type="Node2D" parent="."]
editor/display_folded = true

[node name="Position2D" type="Position2D" parent="spawners"]
position = Vector2( -558.671, -44.8407 )

[node name="Position2D2" type="Position2D" parent="spawners"]
position = Vector2( -67.6286, -160.25 )

[node name="Position2D3" type="Position2D" parent="spawners"]
position = Vector2( -528.532, -230.819 )

[node name="Position2D4" type="Position2D" parent="spawners"]
position = Vector2( 358.222, -165.048 )

[node name="Position2D5" type="Position2D" parent="spawners"]
position = Vector2( 1271.29, -79.158 )

[node name="Position2D6" type="Position2D" parent="spawners"]
position = Vector2( 338.878, -35.8262 )

[node name="Position2D7" type="Position2D" parent="spawners"]
position = Vector2( 1795.91, -271.83 )

[node name="Position2D8" type="Position2D" parent="spawners"]
position = Vector2( 690.948, -280.341 )

[node name="CoinsPositions" type="Node2D" parent="."]
editor/display_folded = true

[node name="Position2D" type="Position2D" parent="CoinsPositions"]
position = Vector2( -574.222, -532.695 )

[node name="Position2D2" type="Position2D" parent="CoinsPositions"]
position = Vector2( 677.324, -541.286 )

[node name="Position2D3" type="Position2D" parent="CoinsPositions"]
position = Vector2( 1822.9, -545.808 )

[node name="Position2D4" type="Position2D" parent="CoinsPositions"]
position = Vector2( 1736.99, -30.2975 )

[node name="Position2D5" type="Position2D" parent="CoinsPositions"]
position = Vector2( 1072.25, -254.891 )

[node name="Position2D6" type="Position2D" parent="CoinsPositions"]
position = Vector2( 193.468, -354.376 )

[node name="Position2D7" type="Position2D" parent="CoinsPositions"]
position = Vector2( 12.5867, -361.913 )

[node name="Position2D8" type="Position2D" parent="CoinsPositions"]
position = Vector2( 107.549, -610.624 )

[node name="Position2D9" type="Position2D" parent="CoinsPositions"]
position = Vector2( 904.933, -545.809 )

[node name="Position2D10" type="Position2D" parent="CoinsPositions"]
position = Vector2( 1016.48, -425.221 )

[node name="Coins" type="Node2D" parent="."]

[node name="Arrows" type="Node2D" parent="."]

[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
